# DT2020test

./: CI.yml  CMakeCache.txt  CMakeLists.txt  Doxyfile  GameOfLife  Makefile  cmake_install.cmake  f1.txt  game.c  game.h  main.c  unit_test.c
DOCUMENT/html/: classes.html  dir_37c6514aeece95293041e34c0f2e0784.html  dir_9f97b40203d0b7782e2ba57c500dd0f3.html  dir_a15021ac117b2b89fdb6bd26aaceb14e.html  files.html  game_8h_source.html  print__with__ansi_8h_source.html  print__with__sdl_8h_source.html  structboard-members.html  structboard.html
console/: CMakeLists.txt  Makefile  cmake_install.cmake  print_with_ansi.c  print_with_ansi.h
game/: CMakeLists.txt  Makefile  cmake_install.cmake  game.c  game.h
html/: annotated.html  files.html  game_8h_source.html  print__with__ansi_8h_source.html  structboard.html
printing_SDL2/: CMakeLists.txt  Makefile  cmake_install.cmake  print_with_sdl.c  print_with_sdl.h
